- Web API implemented - Swagger added

--- a/AspDemo.Web/AspDemo.Web/appsettings.json
+++ b/AspDemo.Web/AspDemo.Web/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CompaniesDbConnectionString": "Data Source=(LocalDB)\\MSSQLLocalDB;Database=companiesDb;Trusted_Connection=True;"
+  }
+
 }
