--- a/AspDemo.Web/AspDemo.Web/AspDemo.Web.csproj
+++ b/AspDemo.Web/AspDemo.Web/AspDemo.Web.csproj
@@ -2,7 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <StartupObject>AspDemo.Web.Program</StartupObject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AspDemo.DomainModel\AspDemo.DomainModel.csproj" />
+  </ItemGroup>
 
 
 
