--- a/AspDemo.Web/AspDemo.Web/AspDemo.Web.csproj
+++ b/AspDemo.Web/AspDemo.Web/AspDemo.Web.csproj
@@ -7,12 +7,16 @@
 
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.8" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\AspDemo.DomainModel\AspDemo.DomainModel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\Founder\" />
   </ItemGroup>
 
 
